Fix taxon page layout issues
- Fixed the showing and hiding of more organisations in the organisation
  list
- Fixed the unordered list - these had the browser defaults. Using
  `govuk-list` removes the default bullet and spacing.

--- a/app/assets/stylesheets/views/_taxons.scss
+++ b/app/assets/stylesheets/views/_taxons.scss
@@ -134,6 +134,12 @@
   }
 }
 
+.taxon-page__more-organisations {
+  &.js-hidden {
+    display: none;
+  }
+}
+
 .taxon-page__sub-topic-sidebar a {
   display: block;
   text-decoration: none;
